--- a/style.css
+++ b/style.css
@@ -1,39 +1,106 @@
-* {
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/* 
+    META ELEMENTS AND BACKGROUND
+*/
+
+@font-face {
+    font-family: 'vintage';
+    src: url('/fonts/vintage.ttf') format('truetype');
 }
 
-.body {
-        background-color: #212121;
+* {
+    font-family: 'vintage';
+}
+
+html {
+    background-color: #d5d5fe !important;
 }
 
 /* 
         NAVBAR
 */
 
-ul.navigation {
-        position: fixed;
-        top: 0;
-        margin-top: 0;
-        list-style-type: none;
-        width: 100%;
-        height: fit-content;
-        padding: 0;
-        overflow: hidden;
-        background: #000000 !important;
-        z-index: 10;
+.navbar {
+   background-color: #3d3e6a !important;
+}
+
+.navbar-menu {
+    background-color: #3d3e6a !important;
+}
+
+h1.title {
+    color: #EEEEEE;
+    align-self: center;
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+span {
+    color: #EEEEEE;
+}
+
+div.buttons {
+    padding: 0 !important;
+    top: 0 !important;
+    margin: 0 !important;
+}
+
+a.button:hover {
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+/* BODY */
+
+/* PHOTO FRAME */
+
+
+div.img-frame{
+    border: .5rem solid #EEEEEE !important;
+    border-radius: 2px !important;
+    background-color: #EEEEEE;
+    display: grid;
+    place-items: center;
+}
+
+@media (min-width: 1024px) {
+    div.img-frame{
+      max-width: 30%;
     }
-    
-    .right {
-        float: right;
-        height: 100%;
+}
+
+@media (max-width: 1024px) {
+    div.img-frame{
+      max-width: 80%;
+      margin: 0 auto;
     }
-    
-    .left {
-        float: left;
-        height: 100%;
-    }
-    
-    a.button:hover{
-        -webkit-user-drag: none;
-        user-select: none;
-    }
+  }
+
+div.flexbox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/* IMAGES MODAL */
+
+#dialog::backdrop{
+    background-color: black;
+    backdrop-filter: blur(5px) ;
+    opacity: 65%;
+}
+
+#dialog{
+    width: 80vw;
+    height: 80vh;
+    border: none 0px #FFFFFF !important;
+    user-select: none;
+    -webkit-user-select: none;
+    outline: none;
+    border-radius: 40px;
+    text-align: center !important;
+    display: grid;
+    place-items: center;
+}
+
+#dialog img {
+}
