--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 html {
     background-color: #d5d5fe !important;
 }
-
 /* 
         NAVBAR
 */
@@ -62,6 +61,11 @@ div.img-frame{
     place-items: center;
 }
 
+div.img-frame img {
+    cursor: pointer;
+    overflow: hidden;
+}
+
 @media (min-width: 1024px) {
     div.img-frame{
       max-width: 30%;
@@ -83,24 +87,43 @@ div.flexbox {
 
 /* IMAGES MODAL */
 
-#dialog::backdrop{
-    background-color: black;
-    backdrop-filter: blur(5px) ;
-    opacity: 65%;
+.modal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.733);
+    margin-top: -1px;
+    animation: zoom 0.3s ease-in-out;
 }
 
-#dialog{
-    width: 80vw;
-    height: 80vh;
-    border: none 0px #FFFFFF !important;
-    user-select: none;
-    -webkit-user-select: none;
-    outline: none;
-    border-radius: 40px;
-    text-align: center !important;
-    display: grid;
-    place-items: center;
+@keyframes zoom {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+.modal img {
+    width: 50%;
+    object-fit: cover;
 }
 
-#dialog img {
+.closeBtn {
+    color: rgba(255, 255, 255, 0.87);
+    font-size: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.closeBtn:hover {
+    color: rgb(255, 255, 255);
 }
