added the image modal library and implemented it

--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ a.button:hover {
 
 /* BODY */
 
+@media (max-width: 1024px) {
+    #topo{
+        display: none !important;
+    }
+}
+
 /* PHOTO FRAME */
 
 
@@ -87,43 +93,12 @@ div.flexbox {
 
 /* IMAGES MODAL */
 
-.modal {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.733);
-    margin-top: -1px;
-    animation: zoom 0.3s ease-in-out;
+span.lb-caption {
+    font-family: 'JetBrains Mono'
 }
 
-@keyframes zoom {
-    from {
-        transform: scale(0);
-    }
-    to {
-        transform: scale(1);
-    }
-}
-.modal img {
-    width: 50%;
-    object-fit: cover;
-}
-
-.closeBtn {
-    color: rgba(255, 255, 255, 0.87);
-    font-size: 25px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 20px;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-}
-
-.closeBtn:hover {
-    color: rgb(255, 255, 255);
+div.img-frame a, div.img-frame a img{
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
 }
